--- a/templates/taskapp/base.html
+++ b/templates/taskapp/base.html
@@ -6,7 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Tracker</h1>
+    <div>
+        <li><a href="/">Головна</a></li>
+        <li>
+            {% if user.is_authenticated %}
+            Hello, {{user.username}} <form action='{% url "logout" %}' method="submit">{% csrf_token %} <input type='submit' value='Log out'></form>
+            {% else %}
+            <a href="{% url 'login' %}">Log in</a>
+            {% endif %}
+        </li>
+        <li><a></a></li>
+    </div>
     {% block content %}
 
     {% endblock %}
